cc: Ensure to process active low res pending high res tilings at raster

This patch ensures that we process active low res pending high res
tilings, since they can have required for activation tiles. Previously,
this only applied to non ideal tiles, but clearly it's possible to hit
the rare case of low res on active while high res on pending.

R=enne, chrishtr
BUG=595209
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review URL: https://codereview.chromium.org/1808043002

Cr-Commit-Position: refs/heads/master@{#381613}

Former-commit-id: ad3070d0f8f9b7513222014d218d0937da6d8077